@@ -269,7 +269,6 @@ namespace Orthanc
     }
 
     DicomModification modification;
-    modification.SetAllowManualIdentifiers(true);
 
     Json::Value request;
     ParseModifyRequest(request, modification, call);
@@ -314,7 +313,6 @@ namespace Orthanc
     }
 
     DicomModification modification;
-    modification.SetAllowManualIdentifiers(true);
 
     Json::Value request;
     ParseAnonymizationRequest(request, modification, call);
